--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -43,6 +43,7 @@ jobs:
         host: ${{ secrets.VPS_HOST }}
         username: ${{ secrets.VPS_USERNAME }}
         key: ${{ secrets.VPS_SSH_KEY }}
+        key_format: base64
         script: |
           docker pull ${{ secrets.DOCKER_USERNAME }}/fastapi_app:latest
           docker stop fastapi_container || true
