--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,9 +41,8 @@ jobs:
       uses: appleboy/ssh-action@v0.1.4
       with:
         host: ${{ secrets.VPS_HOST }}
-        username: ${{ secrets.VPS_USERNAME }}
-        key: ${{ secrets.VPS_SSH_KEY }}
-        key_format: base64
+        username: root
+        key: ${{ secrets.VPS_SSH_KEY }}  # Ensure this is base64 encoded key
         script: |
           docker pull ${{ secrets.DOCKER_USERNAME }}/fastapi_app:latest
           docker stop fastapi_container || true
