--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,23 +28,22 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
-        context: .
+        context:
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/fastapi_app:latest
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-
     steps:
-    - name: SSH into server and deploy
-      uses: microsoft/ssh-action@v1
-      with:
-        host: ${{ secrets.VPS_HOST }}
-        username: root
-        key: ${{ secrets.VPS_SSH_KEY }}
-        script: |
-          docker pull ${{ secrets.DOCKER_USERNAME }}/fastapi_app:latest
-          docker stop fastapi_container || true
-          docker rm fastapi_container || true
-          docker run -d --name fastapi_container -p 80:80 ${{ secrets.DOCKER_USERNAME }}/fastapi_app:latest
+      - name: SSH into server and deploy
+        uses: appleboy/ssh-action@v0.1.4
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: root
+          key: ${{ secrets.VPS_SSH_KEY }}  # Ensure this is base64 encoded key
+          script: |
+            docker pull ${{ secrets.DOCKER_USERNAME }}/fastapi_app:latest
+            docker stop fastapi_container || true
+            docker rm fastapi_container || true
+            docker run -d --name fastapi_container -p 80:80 ${{ secrets.DOCKER_USERNAME }}/fastapi_app:latest
