--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,66 +1,34 @@
-name: CI/CD Pipeline
+name: Deploy FastAPI
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/fastapi_app:latest
-
   deploy:
     runs-on: ubuntu-latest
-    needs: build
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Decode SSH Key
+    - name: Set up SSH key
       run: |
-        echo "${{ secrets.VPS_SSH_KEY }}" | base64 --decode > /tmp/id_rsa
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > /tmp/id_rsa
         chmod 600 /tmp/id_rsa
-        ls -l /tmp/id_rsa
-        cat /tmp/id_rsa
 
-    - name: Debug - List /tmp directory
-      run: ls -l /tmp
+    - name: Test SSH connection
+      run: ssh -i /tmp/id_rsa -o StrictHostKeyChecking=no root@93.127.185.162 "echo SSH connection successful"
 
-    - name: Test SSH Key Access
-      run: ssh -i /tmp/id_rsa -o StrictHostKeyChecking=no root@${{ secrets.VPS_HOST }} "echo SSH connection successful"
-
-    - name: SSH into server and deploy
+    - name: Deploy with SSH
       uses: appleboy/ssh-action@v0.1.4
       with:
-        host: ${{ secrets.VPS_HOST }}
+        host: your_server_ip
         username: root
-        key_path: /tmp/id_rsa
+        key: /tmp/id_rsa
         script: |
-          docker pull ${{ secrets.DOCKER_USERNAME }}/fastapi_app:latest
+          docker pull vasanrock
           docker stop fastapi_container || true
           docker rm fastapi_container || true
-          docker run -d --name fastapi_container -p 80:80 ${{ secrets.DOCKER_USERNAME }}/fastapi_app:latest
+          docker run -d --name fastapi_container -p 80:80 vasanrock
