--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DATABASE_URL=mysql+mysqlconnector://u490928194_APD:APD%40apd123@82.180.142.240/u490928194_APD
+DATABASE_URL="mysql+mysqlconnector://u490928194_APD:APD%40apd123@82.180.142.240/u490928194_APD"
 
 DB_HOST=82.180.142.240
 DB_USER=u490928194_APD
-DB_PASSWORD=APD@apd123APD@apd123
+DB_PASSWORD=APD@apd123
 DB_NAME=u490928194_APD
