--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - /path/to/your/certs:/etc/nginx/certs
-      - ./nginx/html:/usr/share/nginx/html      
+      - /etc/letsencrypt/live/austinpartnershipbackend.site:/etc/nginx/certs
+      - ./nginx/html:/usr/share/nginx/html
     depends_on:
       - web
 
